Implement a refresh button. CSS changes. Fixed Escaping.

--- a/client/index.html
+++ b/client/index.html
@@ -38,6 +38,7 @@
           <option value="sports">sports</option>
         </select>
       </div>
+      <button type="button" id="refreshButton" onClick="app.fetch()">Refresh Messages</button>
     </div>
     <div id="chats"></div>
   </body>
