Refactor code to functional style.

--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
     <div id="main">
       <h1>chatterbox</h1>
       <div id="messageDiv">Enter your Message:<input name="messageBox" id="messageText" type="text">
-        <button type="button" id="sendButton" onClick="app.send()">Send Message</button>
+        <button type="button" id="sendButton">Send Message</button>
         <select id="chatroomSelect" class="chatroomSelecter">
           <option value="lobby">lobby</option>
           <option value="random">random</option>
