Implement friends list functionality, ability to add chat rooms. Automatically refresh after sending a message.

--- a/client/index.html
+++ b/client/index.html
@@ -38,6 +38,9 @@
         </select>
       </div>
       <button type="button" id="refreshButton">Refresh Messages</button>
+      <span id="addRoomSpan">Add a Chat Room:<input name = "addRoom" id = "newRoomText" type="text">
+        <button type = "button" id = "newRoomButton">Add Room</button>
+      </span>
     </div>
     <div id="chats"></div>
     <script src="scripts/app.js"></script>
