--- a/client/index.html
+++ b/client/index.html
@@ -29,18 +29,20 @@
   <body>
     <div id="main">
       <h1>chatterbox</h1>
-      <div id="messageDiv">Enter your Message:<input name="messageBox" id="messageText" type="text">
-        <button type="button" id="sendButton">Send Message</button>
-        <select id="chatroomSelect" class="chatroomSelecter">
-          <option value="lobby">lobby</option>
-          <option value="random">random</option>
-          <option value="sports">sports</option>
-        </select>
+      <div class="controls">
+        <div id="messageDiv">Enter your Message:<input name="messageBox" id="messageText" type="text">
+          <button type="button" id="sendButton">Send Message</button>
+          You are in:<select id="chatroomSelect" class="chatroomSelecter">
+            <option value="lobby">lobby</option>
+            <option value="random">random</option>
+            <option value="sports">sports</option>
+          </select>
+        </div>
+        <button type="button" id="refreshButton">Refresh Messages</button>
+        <span id="addRoomSpan">Add a Chat Room:<input name = "addRoom" id = "newRoomText" type="text">
+          <button type = "button" id = "newRoomButton">Add Room</button>
+        </span>
       </div>
-      <button type="button" id="refreshButton">Refresh Messages</button>
-      <span id="addRoomSpan">Add a Chat Room:<input name = "addRoom" id = "newRoomText" type="text">
-        <button type = "button" id = "newRoomButton">Add Room</button>
-      </span>
     </div>
     <div id="chats"></div>
     <script src="scripts/app.js"></script>
