--- a/client/index.html
+++ b/client/index.html
@@ -32,7 +32,7 @@
       <div class="controls">
         <div id="messageDiv">Enter your Message:<input name="messageBox" id="messageText" type="text">
           <button type="button" id="sendButton">Send Message</button>
-          You are in:<select id="chatroomSelect" class="chatroomSelecter">
+          You are in:<select id="chatroomSelect" class="chatroomSelecter" width="200px">
             <option value="lobby">lobby</option>
             <option value="random">random</option>
             <option value="sports">sports</option>
