chatroom selector no longer contains duplicates. CSS changes.

--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,7 @@
         <div id="messageDiv">Enter your Message:<input name="messageBox" id="messageText" type="text">
           <button type="button" id="sendButton">Send Message</button>
           You are in:<select id="chatroomSelect" class="chatroomSelecter" width="200px">
+            <option value="lobby" id="lobbyoption">lobby</option>
           </select>
         </div>
         <button type="button" id="refreshButton">Refresh Messages</button>
